--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-navigation-menu": "^0.1.2",
+    "@radix-ui/react-popover": "0.1.6",
+    "@stitches/react": "^1.2.8",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
